configs/envoy-static.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: typed-per-filter-config-for-ws
          route_config:
            name: typed-per-filter-config-for-ws
            virtual_hosts:
            - name: app-ws
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/disable-basic-auth"
                direct_response:
                  status: 200
                  body: 
                    inline_string: "OK"
                typed_per_filter_config:
                  envoy.filters.http.basic_auth:
                    "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                    disabled: true
              - match:
                  prefix: "/ws-disable-basic-auth"
                route: 
                  cluster: service_ws
                  upgrade_configs:
                  - upgrade_type: websocket
                typed_per_filter_config:
                  envoy.filters.http.basic_auth:
                    "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                    disabled: true
              - match:
                  prefix: "/ws"
                route: 
                  cluster: service_ws
                  upgrade_configs:
                  - upgrade_type: websocket
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body: 
                    inline_string: "OK"
          http_filters:
            - name: envoy.filters.http.basic_auth
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuth
                users:
                  inline_string: |-
                    user:{SHA}W6ph5Mm5Pz8GgiULbPgzG37mj9g=
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: service_ws
    type: STATIC
    load_assignment:
      cluster_name: service_ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
